--- a/java-web-ru/jdbc/src/main/webapp/WEB-INF/templates/articles/index.html
+++ b/java-web-ru/jdbc/src/main/webapp/WEB-INF/templates/articles/index.html
@@ -20,6 +20,15 @@
       </tr>
   </table>
    <!-- BEGIN -->
-   
+  <nav>
+    <ul class="pagination justify-content-center">
+      <li class="page-item">
+        <a class="page-link" th:href="@{/articles(page=(${page < 2}) ? 1 : (${page - 1}))}">Prev</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" th:href="@{/articles(page=${page + 1})}">Next</a>
+      </li>
+    </ul>
+  </nav>
   <!-- END -->
 </section>
