--- a/java-web-ru/jdbc/src/main/webapp/WEB-INF/templates/articles/show.html
+++ b/java-web-ru/jdbc/src/main/webapp/WEB-INF/templates/articles/show.html
@@ -7,6 +7,11 @@ layout:decorate="~{layouts/application.html}">
 </head>
 <section layout:fragment="content">
   <!-- BEGIN -->
-  
+  <div class="card" th:object="${article}">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item" th:text="*{title}"></li>
+      <li class="list-group-item" th:text="*{body}"></li>
+    </ul>
+  </div>
   <!-- END -->
 </section>
