--- a/java-web-ru/orm/src/main/webapp/WEB-INF/templates/articles/show.html
+++ b/java-web-ru/orm/src/main/webapp/WEB-INF/templates/articles/show.html
@@ -12,7 +12,7 @@ layout:decorate="~{layouts/application.html}">
       <li class="list-group-item" th:text="*{title}"></li>
       <li class="list-group-item" th:text="*{body}"></li>
       <!-- BEGIN -->
-      
+      <li class="list-group-item" th:text="*{category.name}"></li>
       <!-- END -->
     </ul>
   </div>
